@@ -4,6 +4,7 @@
 // (C) 2002 Ximian, Inc.  http://www.ximian.com
 // Author: Everaldo Canuto everaldo.canuto@bol.com.br
 //         Alexandre Pigolkine ( pigolkine@gmx.de)
+//			Sanjay Gupta (gsanjay@novell.com)
 //
 using System;
 using System.Drawing;
@@ -11,12 +12,20 @@ using System.Drawing;
 namespace System.Drawing.Text {
 
 	public sealed class InstalledFontCollection : FontCollection {
-		//internal static IFontCollectionFactory	factory = Factories.GetFontCollectionFactory();
+		
+		internal InstalledFontCollection (IntPtr ptr): base (ptr)
+		{}
 
-		// constructors
-		[MonoTODO]
-		public InstalledFontCollection() {
-			//implementation = factory.InstalledFontCollection();
+		public InstalledFontCollection ()
+		{
+			Status status = GDIPlus.GdipNewInstalledFontCollection(out nativeFontCollection);
+						
+			if (status != Status.Ok){
+				nativeFontCollection = IntPtr.Zero;
+				throw new Exception ("Error calling GDIPlus.GdipNewInstalledFontCollection: " +status);
+			}
+			Console.WriteLine("Installed fonts are " + nativeFontCollection);				
 		}
 	}
 }
+
