@@ -3,8 +3,11 @@
 //
 // (C) 2002 Ximian, Inc.  http://www.ximian.com
 // Author: Everaldo Canuto everaldo.canuto@bol.com.br
+//         Sanjay Gupta (gsanjay@novell.com)
 //
 using System;
+using System.IO;
+using System.Drawing;
 using System.Runtime.InteropServices;
 
 namespace System.Drawing.Text {
@@ -13,24 +16,48 @@ namespace System.Drawing.Text {
 	public sealed class PrivateFontCollection : FontCollection {
 
 		// constructors
-		[MonoTODO]
-		public PrivateFontCollection() {
-			throw new NotImplementedException ();
+		internal PrivateFontCollection (IntPtr ptr): base (ptr)
+		{}
+
+		public PrivateFontCollection ()
+		{
+			Status status = GDIPlus.GdipNewPrivateFontCollection(out nativeFontCollection);
+						
+			if (status != Status.Ok)
+			{
+				nativeFontCollection = IntPtr.Zero;
+				throw new Exception ("Error calling GDIPlus.GdipNewPrivateFontCollection: " +status);
+			}
 		}
 		
 		// methods
-		[MonoTODO]
 		[ComVisible(false)]
-		public void AddFontFile(string filename) {
-			throw new NotImplementedException ();
+		public void AddFontFile(string filename) 
+		{
+			if (filename == null)
+				throw new Exception("Value cannot be null, Parameter name : filename" );
+			bool exists = File.Exists(filename);
+			if (!exists)
+				throw new Exception("The path is not of a legal form");
+
+			Status status = GDIPlus.GdipPrivateAddFontFile(nativeFontCollection, filename);
+						
+			if (status != Status.Ok)
+			{
+				throw new Exception ("Error calling GDIPlus.GdipPrivateAddFontFile: " +status);
+			}
+
+			Console.WriteLine("Font file added to collection");
+
 		}
 
-		[MonoTODO]
 		[ComVisible(false)]
-		public void AddMemoryFont(IntPtr memory, int length) {
-			throw new NotImplementedException ();
+		public void AddMemoryFont(IntPtr memory, int length) 
+		{
+		
 		}
 
 	}
 
 }
+
